force-app/main/default/objects/Ativo_de_aditivo_de_comodato__c/Ativo_de_aditivo_de_comodato__c.object-meta.xml
<CustomObject>
    <label>Ativo de aditivo de comodato</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ativos de aditivo de comodato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>