force-app/main/default/objects/Ativo_de_aditivo_de_comodato__c/fields/Aditivo_de_Comodato__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_de_Comodato__c</fullName>
    <label>Aditivo de Comodato</label>
    <referenceTo>Aditivo_de_Comodato__c</referenceTo>
    <relationshipLabel>Ativos de aditivo de comodato</relationshipLabel>
    <relationshipName>Ativos_de_aditivo_de_comodato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>