force-app/main/default/objects/Ativo_de_aditivo_de_comodato__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ativos de aditivo de comodato</relationshipLabel>
    <relationshipName>Ativos_de_aditivo_de_comodato</relationshipName>
    <type>Lookup</type>
</CustomField>