force-app/main/default/objects/Ativo_de_aditivo_de_comodato__c/validationRules/Rascunho.validationRule-meta.xml
<ValidationRule>
    <fullName>Rascunho</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Aditivo_de_Comodato__r.Status__c) != &apos;Rascunho&apos;,
!$User.Ignorar_erros__c
)</errorConditionFormula>
    <errorMessage>O aditivo deve estar em rascunho para adicionar ativos.</errorMessage>
</ValidationRule>